# multi_diffcar_ws

./: README.md
src/mydiffcar_gazebo/: CMakeLists.txt  package.xml
src/mydiffcar_gazebo/config/: multi_diffcar.rviz  mydiffcar_gazebo.rviz
src/mydiffcar_gazebo/launch/: multi_diffcar_gazebo.launch  mydiffcar_gazebo.launch
src/mydiffcar_gazebo/map/: nav.pgm  nav.yaml
src/mydiffcar_gazebo/urdf/xacro/: my_base.urdf.xacro  my_base_camera_laser.urdf.xacro  my_camera.urdf.xacro  my_laser.urdf.xacro  my_move.urdf.xacro  my_sensors_camara.urdf.xacro  my_sensors_kinect.urdf.xacro  my_sensors_laser.urdf.xacro
src/mydiffcar_gazebo/worlds/: my_world.world
src/mydiffcar_gazebo/worlds/myhouse/: model.config  model.sdf
src/nmpc_ctr/: CMakeLists.txt  package.xml
src/nmpc_ctr/include/nmpc_ctr/: nmpc_ctr.h
src/nmpc_ctr/launch/: nmpc_ctr.launch  test_formation.launch
src/nmpc_ctr/src/: formation_ctr_2.cpp  formation_ctr_3.cpp  nmpc_ctr.cpp  test_nmpc_ctr_1.cpp
